[package]
name = "autohibernate"
version = "0.1.0"
authors = ["teggot"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "*"
linked-hash-map = "~0.5.3"

[dev-dependencies]
linked-hash-map = "~0.5.3"
